# reo

./: COMPANY.md  COMPLIANCE.md  Cargo.toml  GO-LIVE.md  OUTREACH.md  PITCH.md  README.md  TARGETS.md
.claude/: settings.local.json
.github/workflows/: release.yml
install/: install.ps1  install.sh
landing/: _redirects  enterprise.html  index.html
legal/: privacy.md  refund.md  terms.md
src/: cli.rs  commands.rs  config.rs  crypto.rs  dedup.rs  detect.rs  housekeeping.rs  infra.rs  intent.rs  license.rs  main.rs  model.rs  shell.rs  shrink.rs  ui.rs  vault.rs
src/scan/: mod.rs  network.rs  processes.rs  startup.rs  tasks.rs  types.rs
webhook/: README.md  test-live.mjs  wrangler.toml
webhook/src/: index.mjs  sign.mjs
