[package]
name = "reo"
version = "0.13.0"
edition = "2021"
description = "A local AI security engineer that lives in your terminal and never phones home."
license = "MIT"

[[bin]]
name = "reo"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
rustyline = "14"
owo-colors = { version = "4", features = ["supports-colors"] }
sysinfo = "0.32"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["clock", "serde"], default-features = false }
dirs = "5"
oxipng = { version = "9", default-features = false, features = ["parallel", "zopfli"] }
flate2 = "1"
ed25519-dalek = "2"
base64 = "0.22"
getrandom = "0.2"
notify = "6"
ureq = { version = "2", default-features = false, features = ["json"] }
sha2 = "0.10"

[profile.release]
opt-level = "z"
lto = true
strip = true
panic = "abort"
codegen-units = 1
